
http://www.packetfence.org/support/community.html

This is a list of noteworthy changes across releases. 
For more details and developer visible changes see the ChangeLog file.
For a list of compatibility related changes see the UPGRADE file.

--------------------------------------------------------------------------------
Version <stable> released on <releaseDate>

Bug Fixes
 * violation trigger parser now more tolerant of trailing spaces
 * 'add user' renamed 'add admin' for consistency (#1381, Thanks to Joao Moreira)
 * apache tests under pfcmd checkup fails if modules generates warnings (#1283, Thanks to psnizek)

--------------------------------------------------------------------------------
Version 3.3.1 released on 2012-04-16

Bug Fixes
 * named not started if using inline enforcement only

--------------------------------------------------------------------------------
Version 3.3.0 released on 2012-04-13

New Hardware
 * AlliedTelesis AT8000GS Switches using 802.1x/Mac Authentication without VoIP
 * Added 802.1x/Mac Authentication support for HP 2500/2600 switches (no VoIP)
 * Cisco WLC/WiSM product line now supports RADIUS Disconnect (RFC3576) to perform de-authentication

New Features
 * Introduction of Role-based Access Control. Supported on AeroHIVE, Aruba, Meru and Motorola (considered experimental).
 * Wireless deauthentication in Master / Local configuration supported for Aruba controllers (or other Disconnect-Message implementations)
 * New guest self-registration mode: Sponsored. Guests accesses are approved through a 'sponsor'.
 * New guest self-registration option: Pre-registered guests. They can register in advance through the portal. Email and sponsor modes supported right now.

Enhancements
 * New database-driven custom VLAN assignment strategy example
 * Slightly more helpful installer.pl
 * Added a virtual IP (vip) parameter for interfaces in configuration which overrides auto-detection (#1396)
 * More logging